<resources>
    <string name="app_name">Comunicator</string>
    <string name="text">Text</string>
    <string name="title_activity_settings_password">SettingsPasswordActivity</string>
    <string name="title_activity_settings">Листы</string>
    <string name="title_activity_cases">Падежи</string>
    <string name="title_activity_page_settings">PageSettingsActivity</string>
    <string name="title_activity_card_settings">Добавить карточку</string>
    <string name="NOMINATIVE">Именительный падеж</string>
    <string name="CASE">Озвучка</string>
    <string name="save_cases_button">Сохранить</string>
    <string name="new_page_button">Новый лист</string>
    <string name="edit_page_button">Редактировать лист</string>
    <string name="search_line_text">Строка поиска</string>
    <string name="recent_symbol_text">Строка недавних символов</string>
    <string name="symbol_name_text">Введите текст</string>
    <string name="open_cases_button">Озвучка</string>
    <string name="preview_button">Предпросмотр</string>
    <string name="save_card_button">Сохранить карточку</string>
    <string name="type_size">Размер шрифта</string>
    <string name="text_place">Расположение надписи</string>
    <string name="text_colour">Цвет надписи</string>
    <string name="card_image">Изображение символа</string>
    <string name="card_voice">Озвучивание символа</string>
    <string name="frame_size">Толщина рамки</string>
    <string name="frame_colour">Цвет рамки</string>
    <string name="GENITIVE">Родительный падеж</string>
    <string name="DATIVE">Дательный падеж</string>
    <string name="ACCUSATIVE">Винительный падеж</string>
    <string name="INSTRUMENTAL">Творительный падеж</string>
    <string name="PREPOSITIONAL">Предложный падеж</string>
    <string name="submit_password">Подтвердить</string>
    <string name="password_insert_text">Введите пароль</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_symbol_button">Добавить символ</string>
    <string name="save_button">Сохранить лист</string>
    <string name="input_page_name">Введите текст</string>
    <string name="title_activity_graphic_parameters">GraphicParameters</string>
    <string name="graphic_parameters_button">Графика</string>
    <string name="page_list_hint_text">Выберите лист</string>
    <string name="speech_part_list_hint_text">Выберите часть речи</string>
    <string name="image_text">image_text</string>
    <string name="border_color_button">Цвет рамки</string>
    <string name="text_color_button">Цвет текста</string>
    <string name="bottom_text">Снизу</string>
    <string name="cases_exists">Добавить озвучку в остальных\nпадежах</string>
    <string name="up_place">Сверху</string>
    <string name="card_default_text">Надпись</string>
    <string name="card_menu_delete">Удалить</string>
    <string name="card_menu_edit">Редактировать</string>
    <string name="pages_settings">Настройки страниц</string>
    <string name="common_settings">Общие настройки</string>
    <string name="search_text">Поиск</string>
    <string name="yes">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="cards_amount">Кол-во карточек</string>
    <string name="start_voice">Запись</string>
    <string name="stop_voice">Стоп</string>
    <string name="sound_play">Воспроизвести</string>
    <string name="empty_com_line">Выберите карточку</string>
    <string name="pages_list_text">Листы</string>

    <string-array name="cards_amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="memory_entries">
        <item>Память устройства</item>
        <item>SD карта</item>
    </string-array>

    <string-array name="memory_values">
        <item>internal</item>
        <item>external</item>
    </string-array>

    <string-array name="genitive">
        <item>от</item>
        <item>без</item>
        <item>у</item>
        <item>до</item>
        <item>возле</item>
        <item>для</item>
        <item>вокруг</item>
    </string-array>

    <string-array name="dative">
        <item>по</item>
        <item>к</item>
    </string-array>

    <string-array name="accusative">
        <item>на</item>
        <item>за</item>
        <item>через</item>
        <item>про</item>
    </string-array>

    <string-array name="instrumental">
        <item>за</item>
        <item>под</item>
        <item>над</item>
        <item>перед</item>
        <item>с</item>
    </string-array>

    <string-array name="prepositional">
        <item>о</item>
        <item>об</item>
        <item>обо</item>
        <item>при</item>
        <item>в</item>
    </string-array>
    <string name="title_activity_settings2">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="amount_summary">В строке может быть различное количество карточек. По умолчанию в ряд расположены три карточки.</string>
    <string name="memory_summary">Выберите где будете хранить данные: в памяти устройства или на съемной карте памяти</string>
    <string name="title_activity_page_creation">Добавить лист</string>
    <string name="page_activity_header">Иконка и название листа</string>
    <string name="lists_card_btn_text">Карточки листа</string>
    <string name="title_activity_card_list">Карточки листа</string>
    <string name="car_name_text">Название карточки</string>
    <string name="test_settings">Настройка текста</string>
    <string name="frame_settings">Настройки рамки</string>
    <string name="border_description">Настройка используется\nдля людей с нарушением зрения.\nПо умолчанию рамка серая\nи равна единице</string>
    <string name="nominative_case_text">Добавить озвучку в И.п.</string>
    <string name="camera_btn_text">Сделать фото</string>
    <string name="img_file_btn_text">Выбрать на устройстве</string>
    <string name="camera_web_text">Скачать из интернета</string>
    <string name="uri_insert_text">URI</string>

</resources>
