<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_page_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/new_page_button"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/page_list"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/new_page_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/page_list_hint_text">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_page_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/edit_page_button"
        android:layout_below="@id/page_list"
        android:layout_margin="15dp"
        android:layout_centerInParent="true">
    </com.google.android.material.button.MaterialButton>

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_below="@id/edit_page_button"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_line_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        android:layout_below="@id/search"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent_symbol_text"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>