<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CardSettingsActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/symbol_name"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/symbol_name_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/speech_part"
        android:layout_margin="10dp"
        android:layout_below="@id/symbol_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speech_part_list_hint_text">

        <AutoCompleteTextView
            android:id="@+id/speech_part_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/buttons_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/speech_part">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_graphic_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/graphic_parameters_button">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/open_cases_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/open_cases_button"
            android:layout_toEndOf="@id/open_graphic_button">
        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_card_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save_card_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">
    </com.google.android.material.button.MaterialButton>

</RelativeLayout>