<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PageSettingsActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/page_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/page_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_page_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_symbol_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_symbol_button"
        android:layout_below="@id/page_name_layout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/page_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/add_symbol_button"
        android:layout_above="@id/save_page_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_page_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save_button">
    </com.google.android.material.button.MaterialButton>

</RelativeLayout>