<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GraphicParameters">

     <RelativeLayout
         android:id="@+id/type_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">

         <com.google.android.material.slider.Slider
             android:id="@+id/text_size_slider"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:valueFrom="10"
             android:valueTo="30"/>

      </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/text_place"
        android:layout_margin="10dp"
        android:layout_below="@id/type_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_place">

        <AutoCompleteTextView
            android:id="@+id/text_place_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/text_colour_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_place">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_color_button"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/text_color_button"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:id="@+id/text_colour"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_toEndOf="@id/text_color_button"
            android:layout_alignTop="@id/text_color_button"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_size"
        android:layout_below="@id/text_colour_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.slider.Slider
            android:id="@+id/frame_size_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="30"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_size">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/border_color_button"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/border_color_button"
            android:layout_alignParentStart="true" />
        <LinearLayout
            android:id="@+id/border_colour"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_toEndOf="@id/border_color_button"
            android:layout_alignBottom="@id/border_color_button"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/frame_colour">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/image_file_button"
            android:text="@string/card_image"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/image_file_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_folder_black_24dp"
            android:layout_toStartOf="@id/image_net_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/image_net_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_internet_black_24dp"
            android:layout_toStartOf="@id/image_camera_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/image_camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_photo_camera_black_24dp"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/back_button"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true">
    </com.google.android.material.button.MaterialButton>

</RelativeLayout>